<resources>
    <string name="app_name">Las Mascotitas</string>
    <string name="mi_biografia">ID PVG</string>
    <string name="mi_biografia1">Curso 4 de Android</string>
    <string name="mi_biografia2">Semana 3</string>
    <string name="mi_biografia3">Coursera</string>
    <string name="mi_biografia4">2017</string>

    <!--Textos menu de opciones-->
    <string name="txt_menu_opt_contact">Contactos</string>
    <string name="txt_menu_opt_about">Acerca de</string>
    <string name="txt_menu_opt_config">Configuración de Cuenta</string>


    <!--Textos Actividad Form-->
    <string name="nombre_mascota_perfill">Loboo</string>
    <string name="form_tittle">Contacto</string>
    <string name="form_name">Nombre</string>
    <string name="form_email">Email</string>
    <string name="form_message">Comentario</string>
    <string name="form_btn">Enviar Comentario</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txt_menu_opt_pushNotification">Recibir notificaciones</string>
    <string name="txt_btn_notif">Recibir Notificaciones</string>

    <string-array name="users_array">

        <item>Oreothemightycat</item>
        <item>Belliccat</item>
    </string-array>

</resources>
