<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
tools:context="com.krivic.petagramt43.BioActivity"
android:orientation="vertical">

<include android:id="@+id/miActionBar"
    layout="@layout/action_bar"
    ></include>

<TextView
    android:id="@+id/tituloacercade"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/txt_menu_opt_about"
    android:layout_gravity="center"
    android:textSize="18sp"
    android:textStyle="bold"
    android:paddingTop="20sp"
    />

<ImageView
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:background="@mipmap/ic_launcher_round"
    android:layout_marginTop="80dp"
    android:layout_gravity="center_horizontal"
    />


<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mi_biografia"
    android:paddingTop="50dp"
    android:layout_gravity="center"
    android:textSize="18dp"
    android:layout_marginBottom="10dp"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mi_biografia1"
    android:paddingTop="50dp"
    android:layout_gravity="center"
    android:textSize="18dp"
    android:layout_marginBottom="6dp"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mi_biografia2"
    android:paddingTop="50dp"
    android:layout_gravity="center"
    android:textSize="18dp"
    android:layout_marginBottom="6dp"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mi_biografia3"
    android:paddingTop="50dp"
    android:layout_gravity="center"
    android:textSize="18dp"
    android:layout_marginBottom="6dp"
    />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/mi_biografia4"
    android:paddingTop="50dp"
    android:layout_gravity="center"
    android:textSize="18dp"
    android:layout_marginBottom="6dp"
    />

</LinearLayout>
